--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "test": "jest --watchAll=true",
+    "coverage": "jest --watchAll=false --coverage --setupFiles ./dotenv.js",
+    "test": "jest --watchAll=true --setupFiles ./dotenv.js",
     "typescript": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/node": "^14.0.1",
     "aws-appsync": "^3.0.3",
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1"
@@ -19,6 +21,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.2.1",
     "commitlint": "^8.3.5",
+    "dotenv": "^8.2.0",
     "husky": "^4.2.5",
     "jest": "^25.4.0",
     "react-test-renderer": "^16.13.1",
