--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^14.0.1",
     "aws-appsync": "^3.0.3",
+    "dayjs": "^1.8.27",
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1"
   },
