--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Type Check
-        run: yarn typescript
+      - name: Yarn Install
+        run: yarn install --frozen-lockfile
       - name: Test
         run: yarn test --watchAll=false --coverage --ci
         env:
