--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "typescript": "tsc --noEmit"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^13.4.0",
     "@types/node": "^14.0.1",
     "aws-appsync": "^3.0.3",
+    "contentful": "^7.14.4",
     "dayjs": "^1.8.27",
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1"
