--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "typescript": "tsc --noEmit"
   },
   "dependencies": {
-    "@contentful/rich-text-html-renderer": "^13.4.0",
-    "@types/node": "^14.0.1",
-    "aws-appsync": "^3.0.3",
-    "contentful": "^7.14.4",
-    "dayjs": "^1.8.27",
-    "graphql-tag": "^2.10.3",
+    "@contentful/rich-text-html-renderer": "14.1.1",
+    "@types/node": "14.6.4",
+    "aws-appsync": "4.0.0",
+    "contentful": "7.14.6",
+    "dayjs": "1.8.35",
+    "graphql-tag": "2.11.0",
     "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@types/jest": "25.2.2",
-    "commitlint": "^8.3.5",
+    "@babel/preset-env": "7.11.5",
+    "@babel/preset-react": "7.10.4",
+    "@babel/preset-typescript": "7.10.4",
+    "@commitlint/config-conventional": "9.1.2",
+    "@types/jest": "26.0.13",
+    "babel-polyfill": "^6.26.0",
+    "commitlint": "9.1.2",
     "dotenv": "^8.2.0",
     "husky": "^4.2.5",
-    "jest": "26.0.1",
+    "jest": "26.4.2",
     "react-test-renderer": "^16.13.1",
-    "typescript": "3.9.2"
+    "typescript": "4.0.2"
   },
   "husky": {
     "hooks": {
