--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@contentful/rich-text-html-renderer": "14.1.1",
     "@types/node": "14.6.4",
     "aws-appsync": "4.0.0",
