--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-polyfill": "^6.26.0",
     "commitlint": "9.1.2",
     "dotenv": "^8.2.0",
+    "expect": "^26.4.2",
     "husky": "^4.2.5",
     "jest": "26.4.2",
     "react-test-renderer": "^16.13.1",
