--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.1.4",
     "@contentful/rich-text-html-renderer": "14.1.1",
     "@types/node": "14.6.4",
+    "apollo-link-timeout": "^4.0.0",
     "aws-appsync": "4.0.0",
     "contentful": "7.14.6",
     "dayjs": "1.8.35",
