--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "typescript": "tsc --noEmit"
   },
   "dependencies": {
-    "@apollo/client": "^3.1.4",
+    "@apollo/client": "3.3.11",
     "@contentful/rich-text-html-renderer": "14.1.1",
     "@types/node": "14.6.4",
     "apollo-link-timeout": "^4.0.0",
-    "aws-appsync": "4.0.0",
+    "aws-appsync": "4.0.3",
     "contentful": "7.14.6",
     "dayjs": "1.8.35",
     "graphql-tag": "2.11.0",
